--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,12 +74,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: Montserrat
+       fonts:
+         - asset: assets/fonts/Montserrat-light.ttf
+           weight: 300
+         - asset: assets/fonts/Montserrat-regular.ttf
+           weight: 400
+         - asset: assets/fonts/Montserrat-Medium.ttf
+           weight: 500
+         - asset: assets/font/Montserrat-SemiBold.ttf
+           weight: 600
+         - asset: assets/fonts/Montserrat-Bold.ttf
+           weight: 700
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
